2003-01-21 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Minor changes to the manpage and the other documentation files
   (BUGS, README and TODO).
 * Released netcat 0.3. 
 
2003-01-18 Simone Piunno <simone _at_ deepspace6.net>

 * Merged in i18n branch
   - Full GNU gettext support, and i18n of nc6 source.
   - Initial italian translation.

2003-01-15 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Merged in mauro_refactor_130103 branch
   - Reorganisation of do_connection and do_listen, mostly by separating into
     a few different utility functions.

2003-01-14 Chris Leishman <chris _at_ leishman.org>

 * Added checking of sin6_scope_id in the address comparison.
 * Added extra checks of getaddrinfo results.

2003-01-13 Chris Leishman <chris _at_ leishman.org>

 * Merged in chris_refactor_060103 branch
   - Reduced connection_attributes to a pure attribute store.
   - Reorganised main such that the buffers and io_streams are initialized
     there.
   - Changed do_connect / do_listen to return an fd/socktype rather than
     setting up the remote_stream directly.
   - Added do_listen_continous() to allow for and inetd like mode.
   - An open3 function for exec'ing and talking to an external process (to
     allow for a --exec mode).
 * Increased UDP buffer sizes to 128k.

2003-01-11 Simone Piunno <simone _at_ deepspace6.net>

 * String marking for i18n.

2003-01-03 Chris Leishman <chris _at_ leishman.org>

 * Added ios_write_eof() method to io_stream.  This allows for proper flushing
   and shutdown with half close support.
 * Moved much of the readwrite logging into io_stream.

2003-01-03 Mauro Tortonesi <mauro _at_ deepspace6.net>

 * Started code cleanup for 0.3 release.  Added a lot of assertions, and
   cleaned up the general layout and style.
 * Made connection_attributes more OO in style.

2003-01-01 Chris Leishman <chris _at_ leishman.org>

 * Added full solution for "double bind" issue.  Seems to work correctly in
   all situations.