@@ -1,3 +1,8 @@
+2003-01-23 Chris Leishman <chris _at_ leishman.org>
+
+ * Fixed bug with --no-reuseaddr option not being recognized
+ * Fixed bug in readwrite that could result in non-termination
+
 2003-01-21 Mauro Tortonesi <mauro _at_ deepspace6.net>
 
  * Minor changes to the manpage and the other documentation files
